--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "express-async-handler": "^1.2.0",
-    "mongoose": "^8.3.0"
+    "latest": "^0.2.0",
+    "mongodb": "^6.5.0",
+    "mongoose": "^5.13.22"
   },
   "devDependencies": {
     "nodemon": "^3.1.0"
